--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Text To Speech | @jebbarbas</title>
 </head>
 <body>
+    <div class="modal invisible"><div class="modal-content"></div></div>
     <div class="container">
         <div id="main" class="invisible">
             <form>
@@ -17,12 +18,21 @@
                 <div>
                     <h3>Texto</h3>
                     <textarea placeholder="Escribe aqui el texto a decir"></textarea>
+                    <small id="chars">Carácteres: 0</small>
                 </div>
 
                 <div>
                     <h3>Voces</h3>
-                    <select></select>
+                    <select id="voices"></select>
                 </div>
+
+                <div>
+                    <h3>Filtrar voces por lenguaje</h3>
+                    <select id="filter">
+                        <option value="no" selected>Sin Filtro</option>
+                    </select>
+                </div>
+
 
                 <div>
                     <button>Hablar</button>
